--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.0.1",
+    "moment": "^2.24.0",
     "node-schedule": "^1.3.2",
     "puppeteer": "^1.17.0"
   }
