--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "async": "^3.0.1",
+    "dotenv": "^9.0.2",
     "moment": "^2.24.0",
     "node-schedule": "^1.3.2",
     "puppeteer": "^1.17.0"
